Fixed no-contrast choose file button

--- a/gym-track/src/assets/index.css
+++ b/gym-track/src/assets/index.css
@@ -69,6 +69,14 @@
 }
 
 @layer base {
+  :root {
+    color-scheme: light;
+  }
+
+  .dark {
+    color-scheme: dark;
+  }
+
   * {
     @apply border-border;
   }
